--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brexit E-learning Platform</title>
+    <title>Brexit 🇬🇧-🇪🇺 E-learning Platform</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -117,32 +117,32 @@
 
         <section>
             <h3>Het politieke landschap vóór Brexit:</h3>
-            <h4>Politieke situatie vóór Brexit</h4>
+            <h4><i>Politieke situatie vóór Brexit</i></h4>
             <p>Het Verenigd Koninkrijk heeft een unieke staatsinrichting:
-Geen geschreven grondwet, maar gebruik van gewoonterecht en parlementaire soevereiniteit,dat betekent dus dat het parlement de meeste macht heeft in het VK. De wetten die worden aangenomen door het parlement kunnen dus niet worden vernietigd door de rechterlijke macht. Dit systeem zorgde voor veel  discussies over de rol van EU-wetgeving, veel Britten vonden dat de EU te veel invloed had op het bestuur van het VK.</p>
-            <p>Binnen de EU konden mensen vrij werken in andere lidstaten zonder een visum nodig te hebben. Veel arbeidmigranten uit Oost-Europa, zoalss Polen, kwamen naar het VK om te werken in sectoren zoals de landbouw,horeca en bouw. Sommige Britten dachten dat er te veel migranten kwamen en dit banen wegnam van Britse burgers of dat de migranten te veel druk legden op openbare diensten, zoals ziekenhuizen of scholen. wa
-            <h4>Belangrijke politieke partijen:</h4>
+Geen geschreven grondwet, maar gebruik van gewoonterecht en parlementaire soevereiniteit, dat betekent dus dat het parlement de meeste macht heeft in het VK. De wetten die worden aangenomen door het parlement kunnen dus niet worden vernietigd door de rechterlijke macht. Dit systeem zorgde voor veel  discussies over de rol van EU-wetgeving, veel Britten vonden dat de EU te veel invloed had op het bestuur van het VK.</p>
+            <p>Binnen de EU konden mensen vrij werken in andere lidstaten zonder een visum nodig te hebben. Veel arbeidsmigranten uit Oost-Europa, zoals Polen, kwamen naar het VK om te werken in sectoren zoals de landbouw, horeca en bouw. Sommige Britten dachten dat er te veel migranten kwamen en dit banen wegnam van Britse burgers of dat de migranten te veel druk legden op openbare diensten, zoals ziekenhuizen of scholen. wa
+            <h4><i>Belangrijke politieke partijen:</i></h4>
             <ul>
-                <li>De Conservative Party: Oorspronkelijk voor een sterkere positie binnen de EU, maar met een groeiende eurosceptische vleugel.David Cameron (toen leider van deze partij) beloofde een referendum in 2013 onder druk van UKIP en interne verdeeldheid.</li>
-                <li>De Labour Party: Tegen Brexit, maar met verdeeldheid binnen de partij over mate van de EU-integratie.Stedelijke Labour-stemmers kozen vaak voor Remain, terwijl landelijke arbeiderskiezers Leave steunden.</li>
-                <li>UKIP: Een eurosceptische partij die zich volledig tegen het EU-lidmaatschap verzette.Ook was deze partij tegen immigratie.</li>
+                <li>De Conservative Party: Oorspronkelijk voor een sterkere positie binnen de EU, maar met een groeiende eurosceptische vleugel. David Cameron (toen leider van deze partij) beloofde een referendum in 2013 onder druk van UKIP en interne verdeeldheid.</li>
+                <li>De Labour Party: Tegen Brexit, maar met verdeeldheid binnen de partij over mate van de EU-integratie. Stedelijke Labour-stemmers kozen vaak voor Remain, terwijl landelijke arbeiderskiezers Leave steunden.</li>
+                <li>UKIP: Een eurosceptische partij die zich volledig tegen het EU-lidmaatschap verzette. Ook was deze partij tegen immigratie.</li>
             </ul>
-            <h4>Belangrijkste gebeurtenissen tijdens Brexit-proces:</h4>
-            <p>Het referendum van 2016 werd gehouden onder de slogan "Take Back Control," een kernpunt van de Leave-campagne.Deze campagne gebruikte het idee dat het VK weer controle moest krijgen over wie het land inkomt. Ze wilden strengere immigratieregels invoeren, zodat alleen mensen die echt nodig waren voor de economie konden komen.</p>
+            <h4><i>Belangrijkste gebeurtenissen tijdens Brexit-proces:</i></h4>
+            <p>Het referendum van 2016 werd gehouden onder de slogan "Take Back Control," een kernpunt van de Leave-campagne. Deze campagne gebruikte het idee dat het VK weer controle moest krijgen over wie het land inkomt. Ze wilden strengere immigratieregels invoeren, zodat alleen mensen die echt nodig waren voor de economie konden komen.</p>
             
         </section>
 
         <section>
             <h3>Politieke verschuivingen door Brexit:</h3>
-            <h4>Opkomst van nieuwe partijen</h4>
+            <h4><i>Opkomst van nieuwe partijen</i></h4>
             <p>De Brexit Party werd opgericht om teleurgestelde Leave-kiezers te verenigen, met succes bij de Europese verkiezingen van 2019.
 Ook leidde interne verdeeldheid binnen Labour en Conservatieven tot machtsverschuivingen.</p>
-            <h4>Regionale spanningen</h4>
+            <h4><i>Regionale spanningen</i></h4>
             <ul>
                 <li>Schotland: De meerderheid van de Schotten stemde voor het blijven in de EU. Dit versterkte de roep om onafhankelijkheid en een nieuw referendum over Schotse onafhankelijkheid. Brexit veroorzaakte dus ook spanningen binnen de traditionele unie (het VK).</li>
                 <li>Noord-Ierland: De regionale spanning in Ierland kwam voort uit het feit dat de Republiek Ierland (EU-lid) en Noord-Ierland (deel van het VK) nu verschillende handels- en grensregels zouden hebben door Brexit. De open grens tussen Noord-Ierland en de Republiek Ierland was belangrijk voor de vrede en economie, maar een harde grens zou dit verstoren. De backstop-poging om dit te vermijden werd afgewezen door velen in het VK, waardoor het gevoel van verdeeldheid tussen de landen toenam.</li>
             </ul>
-            <h4>Analyse</h4>
+            <h4><i>Analyse</i></h4>
             <p>Brexit veroorzaakte een grote politieke breuk in het VK. Partijen werden verdeeld over Brexit, waarbij traditionele scheidingen tussen links en rechts werden vervangen door pro- en anti-EU-bondgenootschappen.</p>
         </section>
 
@@ -217,17 +217,17 @@ Ook leidde interne verdeeldheid binnen Labour en Conservatieven tot machtsversch
 
         <section>
             <h3>Arbeidsmigratie vóór en na Brexit:</h3>
-            <h4>Vóór Brexit</h4>
-            <p>Migratie was een essentieel aspect van de Britse economie.EU-burgers, vooral uit Oost-Europa, vulden vacatures in sectoren zoals de bouw, landbouw en horeca. In 2015 kwamen 308.000 mensen naar het VK voor werk, waarvan het merendeel EU-burgers was.</p>
-            <h4>Na Brexit</h4>
+            <h4><i>Vóór Brexit</i></h4>
+            <p>Migratie was een essentieel aspect van de Britse economie. EU-burgers, vooral uit Oost-Europa, vulden vacatures in sectoren zoals de bouw, landbouw en horeca. In 2015 kwamen 308.000 mensen naar het VK voor werk, waarvan het merendeel EU-burgers was.</p>
+            <h4><i>Na Brexit</i></h4>
             <p>Door het verlies van het vrije verkeer van personen na de Brexit, voerde het VK een nieuw migratiesysteem in, gebaseerd op punten. Dit systeem beoogde gekwalificeerde niet-EU-migranten aan te trekken, maar zorgde voor tekorten in sectoren die afhankelijk waren van EU-arbeidsmigranten.</p>
         </section>
 
         <section>
             <h3>Asielmigratie en Brexit:</h3>
-            <h4>Vóór Brexit</h4>
-            <p>Het VK ontving asielzoekers, voornamelijk uit conflictgebieden zoals Syrië,Irak en Afghanistan.Sectoren zoals landbouw, horeca en bouw waren sterk afhankelijk van EU-arbeidskrachten. In 2015 werden er 30% meer asielaanvragen ingediend dan in voorgaande jaren.</p>
-            <h4>Na Brexit</h4>
+            <h4><i>Vóór Brexit</i></h4>
+            <p>Het VK ontving asielzoekers, voornamelijk uit conflictgebieden zoals Syrië,Irak en Afghanistan. Sectoren zoals landbouw, horeca en bouw waren sterk afhankelijk van EU-arbeidskrachten. In 2015 werden er 30% meer asielaanvragen ingediend dan in voorgaande jaren.</p>
+            <h4><i>Na Brexit</i></h4>
             <p>Na de Brexit daalde de instroom van EU-arbeidsmigranten drastisch door het verlies van vrij verkeer, het asielbeleid werd dus gewijzigd. EU-burgers die voor 2020 in het VK woonden, moesten hun verblijfsstatus aanvragen via het EU Settlement Scheme, dit leidde tot een toename van niet-EU-arbeidsmigranten, maar een tekort veroorzaakte in laaggeschoolde sectoren..</p>
             <h4>Analyse</h4>
             <p>Na Brexit veranderde het VK de manier waarop het mensen toeliet om in het land te werken. Voorheen kwamen veel EU-burgers naar het VK om te werken in sectoren zoals de bouw, landbouw en horeca, wat belangrijk was voor de economie. Maar na Brexit werd het moeilijker voor EU-migranten om naar het VK te komen, omdat het nieuwe regels introduceerde die alleen gekwalificeerde arbeiders van buiten de EU toestonden. Dit leidde tot tekorten in sectoren die afhankelijk waren van de EU-arbeidskrachten, wat de werkgelegenheid in die sectoren moeilijker maakte.</p>
@@ -313,7 +313,7 @@ Ook leidde interne verdeeldheid binnen Labour en Conservatieven tot machtsversch
             <p>De Brexit heeft de steun voor eurosceptische partijen in landen zoals Italië en Frankrijk vergroot. Deze partijen gebruiken de onvrede van mensen over de EU om stemmen te winnen, vaak door te zeggen dat hun land beter af zou zijn zonder de EU. Ze stellen dat Brexit een voorbeeld is van hoe landen meer controle kunnen krijgen.
 
 Veel van deze partijen gebruiken echter Brexit als dreiging om betere deals van de EU te krijgen, zonder echt van plan te zijn om de EU te verlaten. Zoals Dr. Martill zegt, wordt anti-EU retoriek vaak gebruikt om stemmen te winnen, en om de EU onder druk te zetten voor veranderingen, zonder echt weg te willen.</p>
-            <h4>Essay</h4>
+            <h4><i>Essay</i></h4>
             <p>Schrijf een essay van 400 woorden over de stelling:"Brexit heeft de EU sterker gemaakt door haar eenheid te testen."Gebruik 2 argumenten en bepaal zelf je kant van de stelling.
         </section>
 <div class="poll">
@@ -377,7 +377,7 @@ Veel van deze partijen gebruiken echter Brexit als dreiging om betere deals van 
 
   <section>
     <h3>Actieve Tijdlijn van Euroscepticisme in Europa</h3>
-    <p>Bekijk de groei van eurosceptische bewegingen in Europa sinds 2016. Klik op een jaar om meer te leren over belangrijke gebeurtenissen.</p>
+    <p>Bekijk de groei van eurosceptische bewegingen in Europa sinds 2016. <b><i>Klik op een jaar om meer te leren over belangrijke gebeurtenissen.</i></b></p>
 
     <div class="timeline-container">
         <ul class="timeline">
